[test] Add a test case to question the mutability of sources.
Are patterns mutable? The image backend is quite happy to write and read
from the same surface, whereas the vector targets create snapshots... This
test case exploits that inconsistency.

Also the interested reader will note that not only does this demonstrate
translational invariance, but a discrepancy with similar surfaces.

--- a/test/.gitignore
+++ b/test/.gitignore
@@ -182,6 +182,7 @@ scale-source-surface-paint
 select-font-face
 select-font-no-show-text
 self-copy
+self-copy-overlap
 self-intersecting
 set-source
 show-glyphs-many
